# trekpedia

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  generate_trek.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  trekpedia.py
.github/workflows/: codeql.yml
backend/: .flake8  requirements.txt
backend/api/: admin.py  models.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/notebooks/: star_trek_series_info_stage_1.json  trekpedia-stage-1.ipynb  trekpedia-stage-2.ipynb
backend/notebooks/backups/: testing.ipynb  trekpedia-stage-1-working-1.ipynb  trekpedia-stage-1-working-2.ipynb
lib/: trekpedia.py
notebooks/: star_trek_series_info_stage_1.json  trekpedia-stage-1.ipynb  trekpedia-stage-2.ipynb
notebooks/output/: star_trek_series_9_lower_decks_episodes.json  star_trek_series_info_stage_1.json
output/: star_trek_series_0_the_original_series_episodes.json  star_trek_series_10_lower_decks_episodes.json  star_trek_series_11_prodigy_episodes.json  star_trek_series_12_strange_new_worlds_episodes.json  star_trek_series_1_the_original_series_episodes.json  star_trek_series_2_the_animated_series_episodes.json  star_trek_series_3_deep_space_nine_episodes.json  star_trek_series_3_the_next_generation_episodes.json  star_trek_series_4_deep_space_nine_episodes.json  star_trek_series_4_voyager_episodes.json  star_trek_series_5_voyager_episodes.json  star_trek_series_6_enterprise_episodes.json  star_trek_series_7_discovery_episodes.json  star_trek_series_7_short_treks_episodes.json  star_trek_series_8_picard_episodes.json  star_trek_series_8_short_treks_episodes.json  star_trek_series_9_picard_episodes.json  star_trek_series_info.json
trekpedia/: __init__.py  helpers.py  trekpedia.py
