[tool.poetry]
name = "trekpedia"
version = "0.0.5"
description = "Get Star Trek episode data from Wikipedia"
authors = ["Grant Ramsay <grant@gnramsay.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.26.0,<2.29.0"
beautifulsoup4 = ">=4.9.3,<4.13.0"
lxml = ">=4.6.3,<4.10.0"
colorama = ">=0.4.4,<0.5.0"
blessings = ">=1.7.0,<1.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.0"
pydocstyle = "^6.3.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
