[tool.poetry]
name = "trekpedia"
version = "0.0.6"
description = "Get Star Trek episode data from Wikipedia"
authors = ["Grant Ramsay <grant@gnramsay.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.26.0,<2.31.0"
beautifulsoup4 = ">=4.9.3,<4.13.0"
lxml = ">=4.6.3,<4.10.0"
colorama = ">=0.4.4,<0.5.0"
blessings = ">=1.7.0,<1.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.5"
pydocstyle = "^6.3.0"
black = "^23.3.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
flake8-pyproject = "^1.2.3"
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
pre = "pre-commit run --all-files"

[tool.flake8]
exclude = ['__init__.py', '.git', 'migrations/versions/*']
max-line-length = 80
docstring-convention = "google"

[tool.bandit]
exclude_dirs = ['config/settings.py', 'schemas/examples.py']

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
filterwarnings = ["ignore:'crypt' is deprecated:DeprecationWarning"]

[tool.pydocstyle]
# add-ignore = ["D104"]
