[tool.poetry]
name = "trekpedia"
version = "0.0.7"
description = "Get Star Trek episode data from Wikipedia"
authors = ["Grant Ramsay <grant@gnramsay.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.26.0,<2.32.0"
beautifulsoup4 = ">=4.9.3,<4.13.0"
lxml = ">=4.6.3,<4.10.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
# linting, type-checking and security checks
bandit = { extras = ["toml"], version = "^1.7.5" }
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-pydocstyle = "^0.2.2"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^1.7.2"
flake8-type-checking = "^2.4.1"
flake8-use-pathlib = "^0.3.0"
isort = "^5.12.0"
pylint = "^2.17.2"
pylint-pydantic = "^0.2.4"
pylint-pytest = "^1.1.2"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
pymarkdownlnt = "^0.9.12"
mypy = "^1.4.1"
tryceratops = "^2.3.2"

# task runner
poethepoet = ">=0.21.1,<0.23.0"

# testing
pytest = "^7.4.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"
pytest-sugar = "^0.9.7"
pytest-randomly = "^3.13.0"
pytest-reverse = "^1.7.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
mock = "^5.1.0"
faker = "^19.2.0"

# documentation
mkdocs = "^1.4.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-material = "^9.4.14"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-latest-git-tag-plugin = "^0.1.2"
mkdocs-minify-plugin = "^0.7.0"
mkdocstrings = "^0.23.0"
pymdown-extensions = "^10.1"
pygments = "^2.15.1"

# typing stubs
types-requests = "^2.31.0.2"
types-beautifulsoup4 = "^4.12.0.6"
types-colorama = "^0.4.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# setup PoeThePoet tasks
[tool.poe.tasks]
pre = "pre-commit run --all-files"
pylint = "pylint **/*.py"
mypy = "mypy **/*.py"
flake8 = "flake8 **/*.py"
black = "black **/*.py"
try = "tryceratops **/*.py"
markdown = "pymarkdown scan **/*.md"
lint = ["black", "flake8", "mypy", "try", "pylint"]

"docs:publish" = "mkdocs gh-deploy"
"docs:build" = "mkdocs build"
"docs:serve" = "mkdocs serve -w TODO.md"
"docs:serve:all" = "mkdocs serve -w TODO.md -a 0.0.0.0:9000"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.flake8]
exclude = ['__init__.py', '.git', 'migrations/versions/*']
max-line-length = 80
extend-ignore = ["E203", "W503"]
extend-select = ["TC", "TC1", "TRY"]
docstring-convention = "google"
type-checking-pydantic-enabled = true
classmethod-decorators = ["classmethod", "validator"]

[tool.bandit]
exclude_dirs = []

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pylint.MAIN]
load-plugins = ["pylint_pytest", "pylint_pydantic"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.DESIGN]
exclude-too-few-public-methods = "pydantic"
max-attributes = 10

[tool.pydocstyle]
add-ignore = ["D104"]

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report", "term-missing", "--cov-report", "html"]
filterwarnings = ["ignore:'crypt' is deprecated:DeprecationWarning"]
mock_use_standalone_module = true

[tool.coverage.run]
# source = []
omit = ["*/tests/*"]

[tool.pymarkdown]
plugins.md014.enabled = false
